Fix text overflowing issue in /domains (#17)
* chore: fix text overflowing on low resolution devices

* chore: upgrade everything to latest

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,7 +24,7 @@ body {
 #domains {
 	font-size: 14px;
 	background-color: #f1f1f1;
-	white-space: pre;
+	white-space: pre-wrap;
 }
 
 a {
